<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textColor="@color/app_color"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/left_guide_line"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints="Name"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide_line"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide_line"
        app:layout_constraintTop_toBottomOf="@+id/ed_name" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide_line"
        app:layout_constraintTop_toBottomOf="@+id/ed_email" />

    <EditText
        android:id="@+id/ed_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide_line"
        app:layout_constraintTop_toBottomOf="@+id/ed_password" />

    <LinearLayout
        android:id="@+id/privacy_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide_line"
        app:layout_constraintTop_toBottomOf="@id/ed_confirm_password">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_1" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24sp"
        android:text="@string/sign_up"
        android:textColor="@color/app_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/left_guide_line"
        app:layout_constraintTop_toBottomOf="@+id/privacy_container" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sign"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintTop_toTopOf="@+id/tv_sign" />

</androidx.constraintlayout.widget.ConstraintLayout>